--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Your Name</title>
-  <meta name="description" content="Here is the secret forest where little bear and little rabbit lives." />
+  <meta name="description" content="This is a secret forest where little bear🧸 and little bunny🐰 lives" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
