--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </nav>
 
   <header class="hero">
-    <h1>Your Name</h1>
-    <p>Short tagline — what you do or want to do.</p>
+    <h1>Qianhui Lu</h1>
+    <p>This is a secret forest where little bear🧸 and little bunny🐰 lives.</p>
   </header>
 
   <main class="container">
