--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Your Name</title>
+  <title>Qianhui Lu</title>
   <meta name="description" content="This is a secret forest where little bear🧸 and little bunny🐰 lives" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
